--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,10 @@
 name: UltimateUserInterface
 version: '${version}'
-main: self.starvern.ultimateuserinterface.UltimateUserInterface
+main: self.starvern.ultimateuserinterface.UUI
 api-version: 1.19
 authors: [ Starvern ]
 description: An advanced GUI management system for ease-of-use.
+commands:
+  interface:
+    description: Open a gui
+    aliases: [if]
