--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: UltimateUserInterface
 version: '${version}'
-main: self.starvern.ultimateuserinterface.UUI
+main: self.starvern.ultimateuserinterface.UUIPlugin
 api-version: 1.19
 authors: [ Starvern ]
 description: An advanced GUI management system for ease-of-use.
