--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,23 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
-    maven { url 'https://jitpack.io' }
+    maven {
+        url = 'https://jitpack.io'
+    }
+    maven {
+        url = 'https://libraries.minecraft.net'
+    }
+    maven {
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.1.0'
     compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
+    compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
+    compileOnly 'com.mojang:authlib:1.5.21'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
 }
 
 java {
