--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'self.starvern'
-version = '0.4.1'
+version = '0.4.2'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.1.0'
-    compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
     compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
     compileOnly 'com.mojang:authlib:1.5.21'
     compileOnly 'me.clip:placeholderapi:2.11.2'
@@ -39,6 +39,14 @@ java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 }
 
+tasks {
+    processResources {
+        filesMatching("plugin.yml") {
+            def props = [version: version]
+            expand props
+        }
+    }
+}
 shadowJar {
     archiveFileName = project.name + "-" + findProperty("version") + ".jar";
 
