--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,11 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.1.0'
+    compileOnly 'org.apache.commons:commons-lang3:3.17.0'
     compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
     compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
-    compileOnly 'com.mojang:authlib:1.5.21'
-    compileOnly 'me.clip:placeholderapi:2.11.2'
+    compileOnly 'com.mojang:authlib:3.13.56'
+    compileOnly 'me.clip:placeholderapi:2.11.6'
 }
 
 java {
