--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'self.starvern'
-version = '0.5.0'
+version = '0.6.0'
 
 repositories {
     mavenCentral()
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:23.1.0'
     compileOnly 'org.apache.commons:commons-lang3:3.17.0'
     compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
-    compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
+    compileOnly 'com.arcaniax:HeadDatabase-API:1.3.1'
     compileOnly 'com.mojang:authlib:3.13.56'
     compileOnly 'me.clip:placeholderapi:2.11.6'
 }
