--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,54 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.gradleup.shadow' version '9.3.0'
 }
 
 group = 'self.starvern'
-version = '0.6.2'
+version = '0.7.0'
 
 repositories {
     mavenCentral()
     maven {
-        name = 'spigotmc-repo'
-        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        name = "papermc-repo"
+        url = "https://repo.papermc.io/repository/maven-public/"
     }
     maven {
-        name = 'sonatype'
-        url = 'https://oss.sonatype.org/content/groups/public/'
+        name = "sonatype"
+        url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven {
-        url = 'https://jitpack.io'
+        name = "jitpack"
+        url = "https://jitpack.io"
     }
     maven {
-        url = 'https://libraries.minecraft.net'
+        name = "minecraft.net"
+        url = "https://libraries.minecraft.net"
     }
     maven {
-        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+        name = "papi"
+        url = "https://repo.extendedclip.com/content/repositories/placeholderapi/"
     }
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:23.1.0'
-    compileOnly 'org.apache.commons:commons-lang3:3.17.0'
-    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
-    compileOnly 'com.arcaniax:HeadDatabase-API:1.3.1'
-    compileOnly 'com.mojang:authlib:3.13.56'
-    compileOnly 'me.clip:placeholderapi:2.11.6'
+    implementation "org.jetbrains:annotations:23.1.0"
+    implementation "net.kyori:adventure-text-serializer-legacy:4.18.0"
+    implementation "net.kyori:adventure-api:4.22.0"
+
+    compileOnly "org.apache.commons:commons-lang3:3.18.0"
+    compileOnly "io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT"
+    compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
+    compileOnly "com.mojang:authlib:3.13.56"
+    compileOnly "me.clip:placeholderapi:2.11.6"
 }
 
+def targetJavaVersion = 21
+
 java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
+    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
+    toolchain.languageVersion.set(JavaLanguageVersion.of(targetJavaVersion))
 }
 
 tasks {
@@ -48,18 +59,25 @@ tasks {
         }
     }
 }
-shadowJar {
+
+tasks.shadowJar {
     archiveFileName = project.name + "-" + findProperty("version") + ".jar";
 
     relocate 'org.jetbrains.annotations', 'self.starvern.ultimateuserinterface.annotations'
     relocate 'org.intellij.lang.annotations', 'self.starvern.ultimateuserinterface.annotations'
+    relocate 'net.kyori:adventure-text-serializer-legacy', 'self.starvern.ultimateuserinterface.legacy-serializer'
 }
 
-compileJava {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
-    options.release.set(17)
+    options.release.set(targetJavaVersion)
 }
 
-artifacts {
-    archives shadowJar
+processResources {
+    def props = [version: version]
+    inputs.properties props
+    filteringCharset = 'UTF-8'
+    filesMatching('paper-plugin.yml') {
+        expand props
+    }
 }
